--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <service android:name=".service.MyService" />
-
-        <activity android:name=".RoomDBActivity">
+        <activity android:name=".HandlerTestActivity"/>
+        <activity android:name=".HandlerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
