--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation("com.squareup.okhttp3:okhttp:4.5.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
 }
