--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ dependencies {
 
     implementation 'com.amitshekhar.android:android-networking:0.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation("com.squareup.okhttp3:okhttp:4.5.0")
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
 }
