--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <service android:name=".service.MyService" />
         <activity android:name=".HandlerTestActivity"/>
         <activity android:name=".AsyncTaskTestActivity"/>
-        <activity android:name=".RxJava.demoActivity">
+        <activity android:name=".RxJava.RxAndroidActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
