--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,10 @@ dependencies {
     implementation("com.squareup.okhttp3:okhttp:4.5.0")
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'me.tatarka:gradle-retrolambda:3.7.0'
 
     implementation 'io.reactivex:rxjava:1.0.14'
     implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
-    implementation 'me.tatarka:gradle-retrolambda:3.7.0'
 }
